sample/errors/sample_0a.nev


func main() -> int
{
    let a = 10;
    let b = c + 1;

    0
}
